# RETROLIB

./: .clangd  .gitignore  .gitmodules  README.md  subclone.sh  subpull.sh
res/: 2cga_cards_540x160.xcf  CARDS.CGA  JOKER.CGA  SPADE_A.CGA  SPADE_A.ppm  TINYCARD.CGA  TREE.CGA  TREE0.CGA  TREE1.CGA  cards.ppm  joker.pbm  (+6 more)
src/: CMakeLists.txt  _ppm2cga.c  bld.sh  main.c  main_hex.old  main_ppm2cga.c  main_ppm2cga.old  main_show.old  ppm2cga_main.c
src/CGA/: cga_bitmap.c  cga_bitmap.h  cga_bitmap_constants.h  cga_colours.h  cga_constants.h  cga_convert.c  cga_convert.h  cga_detect_adapter.c  cga_detect_adapter.h  cga_hi_res_bitmap.c  cga_hi_res_bitmap.h  cga_hi_res_blt.c  cga_hi_res_blt.h  cga_hi_res_cls.c  cga_hi_res_cls.h  cga_hi_res_constants.h  cga_hi_res_plot.c  cga_hi_res_plot.h  cga_lo_res_constants.h  cga_lookup_table_y.h  cga_mode4_constants.h  cga_types.h
src/CGA/HI/: cga_hi_res_blt.c  cga_hi_res_blt.h  cga_hi_res_cls.c  cga_hi_res_cls.h  cga_hi_res_colours.h  cga_hi_res_constants.h  cga_hi_res_foreground.c  cga_hi_res_foreground.h  cga_hi_res_plot.c  cga_hi_res_plot.h  cga_hi_res_tile.c  cga_hi_res_tile.h
src/CGA/LO/: cga_lo_blit.c  cga_lo_blit.h  cga_lo_blt.c  cga_lo_blt.h  cga_lo_cls.c  cga_lo_cls.h  cga_lo_constants.h  cga_lo_palette.c  cga_lo_palette.h  cga_lo_plot.c  cga_lo_plot.h  cga_lo_res_blt.c  cga_lo_res_blt.h  cga_lo_res_colours.h  cga_lo_res_plot.c  cga_lo_res_plot.h  cga_lo_scroll.c  cga_lo_scroll.h
src/DUMP/: dos_dump_tools.c  dos_dump_tools.h
src/EGA/: ega_detect_adapter.c  ega_detect_adapter.h
src/ENV/: dos_environment.c  dos_environment.h  dos_environment_constants.c  dos_environment_constants.h  dos_environment_types.h  env_constants.c  env_constants.h  env_detect_5140.h  env_detect_crtc.c  env_detect_crtc.h  env_detect_emulation.c  env_detect_emulation.h  env_detect_graphics_adapter.c  env_detect_graphics_adapter.h  env_detect_hardware.c  env_detect_hardware.h  env_emulation.c  env_emulation.h  env_graphics_constants.c  env_graphics_constants.h  env_graphics_types.h  env_time.h  env_types.h  env_video_mode.c  env_video_mode.h
src/HGA/: hga_bitmap.c  hga_bitmap.h  hga_colours.h  hga_constants.h  hga_detect_adapter.c  hga_detect_adapter.h  hga_types.h
src/LIB/: lib_convert.c  lib_convert.h
src/LOG/: log_tools.c  log_tools.h
src/MDA/: mda_constants.h  mda_detect_adapter.c  mda_detect_adapter.h
src/MEM/: dos_mem_arena.c  dos_mem_arena.h  dos_mem_constants.h  dos_mem_convert.h  dos_mem_dump.c  dos_mem_dump.h  dos_mem_pool.c  dos_mem_pool.h  dos_mem_string.c  dos_mem_string.h  dos_memmem.c  dos_memmem.h
src/TEST/: test_arena.h  test_bitmap.h  test_blit.h  test_cga.h  test_env.h  test_genv.h  test_hi_cga.h  test_lo_cga.h  test_mda.h  test_pool.h  test_scroll.h
src/TOOLS/: dos_memmem.h
src/VGA/: vga_detect_adapter.c  vga_detect_adapter.h
